# Review_of_the_8th-grade_acceptance_of_the_National_Assembly

./: .dockerignore  .env.example  .gitignore  APP.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: docs-handoff-agent.md  frontend-pwa-agent.md  naver-search-agent.md  orchestrator-backend-agent.md  qa-test-agent.md  query-strategy-agent.md  ranking-filter-agent.md  secondary-source-agent.md
.github/workflows/: build-android.yml  build-desktop.yml
app/: __init__.py  config.py  main.py  orchestrator.py
app/adapters/: __init__.py  base.py  demo.py  naver.py  secondary.py
app/core/: __init__.py  cache.py  dedupe.py  query_strategy.py  quota.py  ranking.py  text.py
app/tests/: test_api.py  test_cache.py  test_dedupe.py  test_naver_adapter.py  test_orchestrator.py  test_query_strategy.py  test_quota.py  test_ranking.py  test_secondary.py  test_text.py
desktop/: main.js  package.json  preload.js
web/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/scripts/: gen_icons.py
web/src/: api.ts  bookmarks.ts  main.ts  render.ts  styles.css  types.ts
